# OptCuts

./: .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml  setup.py
src/: OptCuts.hpp  OptimizationState.hpp  Optimizer.cpp  Optimizer.hpp  PyOptCuts.cpp  Scaffold.cpp  Scaffold.hpp  TriMesh.cpp  TriMesh.hpp  __init__.py  main.cpp
src/Energy/: Energy.cpp  SymDirichletEnergy.cpp
src/PyOptCuts/: __init__.py
test/: test_PyOptCuts.py
tests/: test_PyOptCuts.py
